--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "weather-app",
+  "homepage": "http://GhazaleNiazi.github.io/weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
