--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "weather-app",
+  "homepage": "https://weather.ghazaleniazi.ir",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
